# classical_laminate_theory

./: LICENSE  README.md  __init__.py  main.py  pyproject.toml  run_examples.py
clt/: laminate_layer.py  layering_strategies.py  material.py  orientation.py  strain_computers.py
clt/config/: config.py  yaml_loader.py
clt/config_utils/: yaml_loader.py
clt/failure_analysis/: failure_analyser.py  failure_strategy.py  plot_failure_envelope.py
clt/failure_criteria/: failure_criterion_protocol.py  tsai_wu.py  tsai_wu_thick.py
clt/material_degraders/: degrader_protocol.py  tsai_wu.py
clt/strain_computers/: computer_factory.py  computer_protocol.py
clt/strain_computers/thick_walled/: __init__.py
clt/strain_computers/thin_walled/: strain_computer.py
examples/failure_envelope/first_ply_failure/: config.yaml  main.py
examples/failure_envelope/last_ply_failure/: config.yaml  main.py
examples/failure_envelope/sweep/: config.yaml
src/classical_laminate_theory/: laminate.py  laminate_factory.py  layer.py  layering_strategies.py  loading.py  strain_computers.py
src/classical_laminate_theory/config_utils/: config.py
src/classical_laminate_theory/failure_analysis/: failure_analyser.py  failure_envelope.py  failure_strategy.py  plot_failure_envelope.py
test/: test_laminate.py  test_layer.py  test_loading.py  test_material.py  test_orientation.py  test_strategies.py
test/test_failure_criteria/: test_failure_criterion.py  test_hashin.py  test_tsai_wu.py
test/test_material_degraders/: test_material_degrader.py  test_tsai_wu.py
(+38 files in other folders)
