[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "classical-laminate-theory"
version = "0.1.0"
description = "A lightweight implementation of Classical Laminate Theory (CLT)"
authors = [{ name = "Victor Kees Poorte", email = "victorpoorte@gmail.com" }]
dependencies = [
    "numpy"
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
